Revision history for Date-Easy

{{$NEXT}}

    [Bug Fixes]
    * correct the bug whereby handing off to Time::ParseDate::parsedate
      used the wrong DST flag

    [Distro Fixes]
    * Incorrect issues link fixed

0.01      2016-03-07 01:22:16PST-0800 America/Los_Angeles

    * initial version